crates/cella-codegen/src/ir/lower/snapshots/cella_codegen__ir__lower__tests__object_with_additional_properties_schema.snap
---
source: crates/cella-codegen/src/ir/lower/mod.rs
expression: result
---
[
    Struct(
        IrStruct {
            name: "Config",
            doc: None,
            fields: [
                IrField {
                    name: "env",
                    json_name: "env",
                    doc: None,
                    ty: Map(
                        String,
                        String,
                    ),
                    required: false,
                    deprecated: false,
                },
            ],
            deny_unknown_fields: false,
            is_all_of: false,
        },
    ),
]
