crates/cella-codegen/src/ir/lower/snapshots/cella_codegen__ir__lower__tests__plain_object.snap
---
source: crates/cella-codegen/src/ir/lower/mod.rs
expression: result
---
[
    Struct(
        IrStruct {
            name: "Config",
            doc: None,
            fields: [
                IrField {
                    name: "metadata",
                    json_name: "metadata",
                    doc: None,
                    ty: Map(
                        String,
                        Value,
                    ),
                    required: false,
                    deprecated: false,
                },
            ],
            deny_unknown_fields: false,
            is_all_of: false,
        },
    ),
]
